refactor: add new formating with section-tag, change project formating, change position of slider-control-buttons

--- a/singolo.html
+++ b/singolo.html
@@ -10,7 +10,7 @@
 <body>
   <header class="header">
     <div class="wrapper header__wrapper">
-      <div class="site_name_wrapper" id="HOME">
+      <div class="site_name_wrapper">
           <h1 class="site__name">SINGOLO <span class="star">*</span></h1>
       </div>
       <nav class="header__navigation">
@@ -34,87 +34,93 @@
       </nav>
     </div>
   </header>
-  <div class="slider">
-    <div class="slider__wrapper">
-      <div class="slider__item">
-        <div class="slide-1">
+  <main>
+    <section id="home">
+      <div class="slider">
+        <div class="slider__wrapper">
+          <div class="slider__item">
+            <div class="slide-1">
+            </div>
+          </div>
+          <div class="slider__item">
+            <div class="slide-2">
+            </div>
+          </div>
         </div>
+          <a class="slider__control slider__control_left" href="#" role="button"></a>
+          <a class="slider__control slider__control_right" href="#" role="button"></a>
       </div>
-      <div class="slider__item">
-        <div class="slide-2">
-        </div>
-      </div>
-    </div>
-    <a class="slider__control slider__control_left" href="#" role="button"></a>
-    <a class="slider__control slider__control_right" href="#" role="button"></a>
-  </div>
-  <div class="our-services" >
-    <div class="wrapper our-services__wrapper" >
-      <div id="SERVICES">
-            <h2 class="our-service__title">Our Services</h2>
-            <p class="our-service__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-      </div>
-      <div class="wrapper layout-2-span-3-column__wrapper" >
-              <div class="wrapper_layout">
-                <div class="our-services__img">
-                  <img src="img/svg/items/services-item-1.svg" alt="pencil">
+    </section>
+    <section id="services">
+      <div class="our-services" >
+        <div class="wrapper our-services__wrapper" >
+          <div id="SERVICES">
+                <h2 class="our-service__title">Our Services</h2>
+                <p class="our-service__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+          </div>
+          <div class="wrapper layout-2-span-3-column__wrapper" >
+                  <div class="wrapper_layout">
+                    <div class="our-services__img">
+                      <img src="img/svg/items/services-item-1.svg" alt="pencil">
+                    </div>
+                    <div class="wrapper_layout__text">
+                      <h3 class="layout__name">Custom Design</h3>
+                      <p class="layout__description">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+                    </div>
+                  </div>
+                  <div class="wrapper_layout">
+                    <div class="our-services__img">
+                      <img src="img/svg/items/services-item-2.svg" alt="lamp">
+                    </div>
+                    <div class="wrapper_layout__text">
+                      <h3 class="layout__name">Inovative Ideas</h3>
+                      <p class="layout__description">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+                    </div>
+                  </div>
+                  <div class="wrapper_layout">
+                    <div class="our-services__img">
+                      <img src="img/svg/items/services-item-3.svg" alt="heart">
+                    </div>
+                    <div class="wrapper_layout__text">
+                      <h3 class="layout__name">Love Is The Answer</h3>
+                      <p class="layout__description">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
+                      </p>
+                    </div>
+                  </div>
+                <div class="wrapper_layout">
+                  <div class="our-services__img">
+                    <img src="img/svg/items/services-item-4.svg" alt="s-phone">
+                  </div>
+                  <div class="wrapper_layout__text">
+                    <h3 class="layout__name">Responsive Layout</h3>
+                    <p class="layout__description">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.</p>
+                  </div>
                 </div>
-                <div class="wrapper_layout__text">
-                  <h3 class="layout__name">Custom Design</h3>
-                  <p class="layout__description">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+                <div class="wrapper_layout">
+                  <div class="our-services__img">
+                    <img src="img/svg/items/services-item-5.svg" alt="answer">
+                  </div>
+                  <div class="wrapper_layout__text">
+                    <h3 class="layout__name">24 / 7 Support</h3>
+                    <p class="layout__description">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem .</p>
+                  </div>
                 </div>
-              </div>
-              <div class="wrapper_layout">
-                <div class="our-services__img">
-                  <img src="img/svg/items/services-item-2.svg" alt="lamp">
+                <div class="wrapper_layout">
+                  <div class="our-services__img">
+                    <img src="img/svg/items/services-item-6.svg" alt="star">
+                  </div>
+                  <div class="wrapper_layout__text">
+                    <h3 class="layout__name">Feel Like A Star</h3>
+                    <p class="layout__description">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
+                  </div>
                 </div>
-                <div class="wrapper_layout__text">
-                  <h3 class="layout__name">Inovative Ideas</h3>
-                  <p class="layout__description">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
-                </div>
-              </div>
-              <div class="wrapper_layout">
-                <div class="our-services__img">
-                  <img src="img/svg/items/services-item-3.svg" alt="heart">
-                </div>
-                <div class="wrapper_layout__text">
-                  <h3 class="layout__name">Love Is The Answer</h3>
-                  <p class="layout__description">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
-                  </p>
-                </div>
-              </div>
-            <div class="wrapper_layout">
-              <div class="our-services__img">
-                <img src="img/svg/items/services-item-4.svg" alt="s-phone">
-              </div>
-              <div class="wrapper_layout__text">
-                <h3 class="layout__name">Responsive Layout</h3>
-                <p class="layout__description">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.</p>
-              </div>
-            </div>
-            <div class="wrapper_layout">
-              <div class="our-services__img">
-                <img src="img/svg/items/services-item-5.svg" alt="answer">
-              </div>
-              <div class="wrapper_layout__text">
-                <h3 class="layout__name">24 / 7 Support</h3>
-                <p class="layout__description">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem .</p>
-              </div>
-            </div>
-            <div class="wrapper_layout">
-              <div class="our-services__img">
-                <img src="img/svg/items/services-item-6.svg" alt="star">
-              </div>
-              <div class="wrapper_layout__text">
-                <h3 class="layout__name">Feel Like A Star</h3>
-                <p class="layout__description">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
-              </div>
-            </div>
 
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-  <div class="portfolio">
+    </section>
+    <section id="portfolio">
+      <div class="portfolio">
         <div class="wrapper" id="portfolio-1">
           <h2 class="portfolio__title">Portfolio</h2>
           <p class="portfolio__text">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
@@ -196,38 +202,40 @@
             </ul>
           </div>
         </div>
-  </div>
-  <footer class="footer">
-        <div class="wrapper footer__wrapper">
-          <div>
-            <p>© Copyright 2013</p>
+      </div>
+    </section>
+    <footer class="footer">
+          <div class="wrapper footer__wrapper">
+            <div>
+              <p>© Copyright 2013</p>
+            </div>
+            <div class="social" >
+              <ul class="ico-networks">
+                <li class="ico-networks__link">
+                  <a href="#">
+                    <img class="svg" src="img/svg/social icons/ico-facebook.svg" alt="facebook">
+                  </a>
+                </li>
+                <li class="ico-networks__link">
+                  <a href="#">
+                    <img class="svg" src="img/svg/social icons/ico-google-plus.svg" alt="google">
+                  </a>
+                </li>
+                <li class="ico-networks__link">
+                  <a href="#">
+                    <img class="svg" src="img/svg/social icons/ico-linkedin.svg" alt="linkedin">
+                  </a>
+                </li>
+                <li class="ico-networks__link">
+                  <a href="#">
+                    <img class="svg" src="img/svg/social icons/ico-twitter.svg" alt="twitter">
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="social" >
-            <ul class="ico-networks">
-              <li class="ico-networks__link">
-                <a href="#">
-                  <img class="svg" src="img/svg/social icons/ico-facebook.svg" alt="facebook">
-                </a>
-              </li>
-              <li class="ico-networks__link">
-                <a href="#">
-                  <img class="svg" src="img/svg/social icons/ico-google-plus.svg" alt="google">
-                </a>
-              </li>
-              <li class="ico-networks__link">
-                <a href="#">
-                  <img class="svg" src="img/svg/social icons/ico-linkedin.svg" alt="linkedin">
-                </a>
-              </li>
-              <li class="ico-networks__link">
-                <a href="#">
-                  <img class="svg" src="img/svg/social icons/ico-twitter.svg" alt="twitter">
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-  </footer>
-  <script async src="./script.js"></script>
+    </footer>
+    <script async src="./script.js"></script>
+  </main>
 </body>
 </html>
