refactor: work with slider: add tag: object for svg-images, position for slider-images, background images for slider controls

--- a/singolo.html
+++ b/singolo.html
@@ -14,7 +14,7 @@
           <h1 class="site__name">SINGOLO <span class="star">*</span></h1>
       </div>
       <nav class="header__navigation">
-          <ul class="navigation" id="MENU">
+          <ul class="navigation" id="nav-menu">
             <li class="navigation__link">
               <a class="active" href="#home">HOME</a>
             </li>
@@ -36,15 +36,25 @@
   </header>
     <section id="slider">
       <div class="slider-container">
-        <div class="carousel-slides">
-          <img  id="lastClone" src="img/slide-2/Slide-2.svg" alt="2 phones" class="slide">
-          <img src="img/slide-1/Slide-1.svg" alt="2 phones" class="slide">
-          <img src="img/slide-2/Slide-2.svg" alt="3 phones" class="slide">
-          <img  id="firstClone" src="img/slide-1/Slide-1.svg" alt="3 phones" class="slide">
+        <div class="slider-line">
+          <object
+            type="image/svg+xml"
+            data="picture.svg">
+            <img class="slide"
+              src="img/slide-1/Slide-1.svg">
+          </object>
+          <object
+            type="image/svg+xml"
+            data="picture.svg">
+            <img class="slide"
+              src="img/slide-2/Slide-2.svg">
+          </object>
         </div>
         <div class="btn-container">
-          <a class="btn" href="#" id="left"></a>
-          <a class="btn" href="#" id="right"></a>
+          <div class="btn" id="left">
+          </div>
+          <div class="btn" id="right">
+          </div>
         </div>
       </div>
     </section>
