refactor: change script for navigation-menu, without result

--- a/singolo.html
+++ b/singolo.html
@@ -7,242 +7,241 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="sass/style.css">
 </head>
-<body id="home">
+<body class="menu-link" id="home">
   <header class="header">
     <div class="wrapper header__wrapper">
       <div class="site_name_wrapper">
-          <h1 class="site__name">SINGOLO <span class="star">*</span></h1>
+        <h1 class="site__name">SINGOLO <span class="star">*</span></h1>
       </div>
       <nav class="header__navigation">
-          <ul class="navigation" id="nav-menu">
-            <li class="navigation__link">
-              <a class="active" href="#home">HOME</a>
-            </li>
-            <li class="navigation__link">
-              <a href="#services">SERVICES</a>
-            </li>
-            <li class="navigation__link">
-              <a href="#portfolio">PORTFOLIO</a>
-            </li>
-            <li class="navigation__link">
-              <a href="#about">ABOUT</a>
-            </li>
-            <li class="navigation__link">
-              <a href="#contact">CONTACT</a>
-            </li>
-          </ul>
+        <ul class="navigation" id="nav-menu">
+          <li class="navigation__link">
+            <a class="active" href="#home">HOME</a>
+          </li>
+          <li class="navigation__link">
+            <a href="#services">SERVICES</a>
+          </li>
+          <li class="navigation__link">
+            <a href="#portfolio">PORTFOLIO</a>
+          </li>
+          <li class="navigation__link">
+            <a href="#about">ABOUT</a>
+          </li>
+          <li class="navigation__link">
+            <a href="#contact">CONTACT</a>
+          </li>
+        </ul>
       </nav>
     </div>
   </header>
-    <section id="slider">
-      <div class="slider-container">
-        <div class="slider-line">
-          <object
-            type="image/svg+xml"
-            data="picture.svg">
-            <img class="slide"
-              src="img/slide-1/Slide-1.svg">
-          </object>
-          <object
-            type="image/svg+xml"
-            data="picture.svg">
-            <img class="slide"
-              src="img/slide-2/Slide-2.svg">
-          </object>
+  <section id="slider">
+    <div class="slider-container">
+      <div class="slider-line">
+        <object
+          type="image/svg+xml"
+          data="picture.svg">
+          <img class="slide"
+            src="img/slide-1/Slide-1.svg">
+        </object>
+        <object
+          type="image/svg+xml"
+          data="picture.svg">
+          <img class="slide"
+            src="img/slide-2/Slide-2.svg">
+        </object>
+      </div>
+      <div class="btn-container">
+        <div class="btn" id="left">
         </div>
-        <div class="btn-container">
-          <div class="btn" id="left">
-          </div>
-          <div class="btn" id="right">
-          </div>
+        <div class="btn" id="right">
         </div>
       </div>
-    </section>
-    <section id="services">
-      <div class="services" >
-        <div class="wrapper our-services__wrapper" >
-          <div>
-            <h2 class="our-service__title">Our Services</h2>
-            <p class="our-service__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          </div>
-          <div class="wrapper layout-2-span-3-column__wrapper" >
-                  <div class="wrapper_layout">
-                    <div class="our-services__img">
-                      <img src="img/svg/items/services-item-1.svg" alt="pencil">
-                    </div>
-                    <div class="wrapper_layout__text">
-                      <h3 class="layout__name">Custom Design</h3>
-                      <p class="layout__description">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
-                    </div>
-                  </div>
-                  <div class="wrapper_layout">
-                    <div class="our-services__img">
-                      <img src="img/svg/items/services-item-2.svg" alt="lamp">
-                    </div>
-                    <div class="wrapper_layout__text">
-                      <h3 class="layout__name">Inovative Ideas</h3>
-                      <p class="layout__description">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
-                    </div>
-                  </div>
-                  <div class="wrapper_layout">
-                    <div class="our-services__img">
-                      <img src="img/svg/items/services-item-3.svg" alt="heart">
-                    </div>
-                    <div class="wrapper_layout__text">
-                      <h3 class="layout__name">Love Is The Answer</h3>
-                      <p class="layout__description">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
-                      </p>
-                    </div>
-                  </div>
+    </div>
+  </section>
+  <section class="menu-link" id="services">
+    <div class="services" >
+      <div class="wrapper our-services__wrapper" >
+        <div>
+          <h2 class="our-service__title">Our Services</h2>
+          <p class="our-service__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+        </div>
+        <div class="wrapper layout-2-span-3-column__wrapper" >
                 <div class="wrapper_layout">
                   <div class="our-services__img">
-                    <img src="img/svg/items/services-item-4.svg" alt="s-phone">
+                    <img src="img/svg/items/services-item-1.svg" alt="pencil">
                   </div>
                   <div class="wrapper_layout__text">
-                    <h3 class="layout__name">Responsive Layout</h3>
-                    <p class="layout__description">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.</p>
+                    <h3 class="layout__name">Custom Design</h3>
+                    <p class="layout__description">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
                   </div>
                 </div>
                 <div class="wrapper_layout">
                   <div class="our-services__img">
-                    <img src="img/svg/items/services-item-5.svg" alt="answer">
+                    <img src="img/svg/items/services-item-2.svg" alt="lamp">
                   </div>
                   <div class="wrapper_layout__text">
-                    <h3 class="layout__name">24 / 7 Support</h3>
-                    <p class="layout__description">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem .</p>
+                    <h3 class="layout__name">Inovative Ideas</h3>
+                    <p class="layout__description">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
                   </div>
                 </div>
                 <div class="wrapper_layout">
                   <div class="our-services__img">
-                    <img src="img/svg/items/services-item-6.svg" alt="star">
+                    <img src="img/svg/items/services-item-3.svg" alt="heart">
                   </div>
                   <div class="wrapper_layout__text">
-                    <h3 class="layout__name">Feel Like A Star</h3>
-                    <p class="layout__description">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
+                    <h3 class="layout__name">Love Is The Answer</h3>
+                    <p class="layout__description">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
+                    </p>
                   </div>
                 </div>
+              <div class="wrapper_layout">
+                <div class="our-services__img">
+                  <img src="img/svg/items/services-item-4.svg" alt="s-phone">
+                </div>
+                <div class="wrapper_layout__text">
+                  <h3 class="layout__name">Responsive Layout</h3>
+                  <p class="layout__description">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.</p>
+                </div>
+              </div>
+              <div class="wrapper_layout">
+                <div class="our-services__img">
+                  <img src="img/svg/items/services-item-5.svg" alt="answer">
+                </div>
+                <div class="wrapper_layout__text">
+                  <h3 class="layout__name">24 / 7 Support</h3>
+                  <p class="layout__description">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem .</p>
+                </div>
+              </div>
+              <div class="wrapper_layout">
+                <div class="our-services__img">
+                  <img src="img/svg/items/services-item-6.svg" alt="star">
+                </div>
+                <div class="wrapper_layout__text">
+                  <h3 class="layout__name">Feel Like A Star</h3>
+                  <p class="layout__description">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
+                </div>
+              </div>
 
-          </div>
         </div>
       </div>
-    </section>
-    <section id="portfolio">
-      <div class="portfolio">
-        <div class="wrapper" id="portfolio-1">
-          <h2 class="portfolio__title">Portfolio</h2>
-          <p class="portfolio__text">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-          <div class="button_portfolio" id="PORTFOLIO">
-            <span class="button_portfolio__item">
-              <button class="button_borderd button_borderd_active">All</button>
-            </span>
-            <span class="button_portfolio__item">
-              <button class="button_borderd">Web Design</button>
-            </span>
-            <span class="button_portfolio__item">
-              <button class="button_borderd">Graphic Design</button>
-            </span>
-            <span class="button_portfolio__item">
-              <button class="button_borderd">Artwork</button>
-            </span>
+    </div>
+  </section>
+  <section class="menu-link" id="portfolio">
+    <div class="portfolio">
+      <div class="wrapper" id="portfolio-1">
+        <h2 class="portfolio__title">Portfolio</h2>
+        <p class="portfolio__text">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+        <div class="button_portfolio" id="PORTFOLIO">
+          <span class="button_portfolio__item">
+            <button class="button_borderd button_borderd_active">All</button>
+          </span>
+          <span class="button_portfolio__item">
+            <button class="button_borderd">Web Design</button>
+          </span>
+          <span class="button_portfolio__item">
+            <button class="button_borderd">Graphic Design</button>
+          </span>
+          <span class="button_portfolio__item">
+            <button class="button_borderd">Artwork</button>
+          </span>
+        </div>
+        <div class="portfolio_images__wrapper">
+            <ul class="portfolio_images">
+              <li class="portfolio_images__item">
+                <div class="image">
+                  <img src="img/portfolio/portfolio-1.png" alt="boat">
+                </div>
+              </li>
+              <li class="portfolio_images__item">
+                <div class="image">
+                  <img src="img/portfolio/portfolio-2.png" alt="happyness">
+                </div>
+              </li>
+              <li class="portfolio_images__item">
+                <div class="image">
+                  <img src="img/portfolio/portfolio-3.png" alt="space">
+                </div>
+              </li>
+              <li class="portfolio_images__item">
+                <div class="image">
+                  <img src="img/portfolio/portfolio-4.png" alt="robot">
+                </div>
+              </li>
+              <li class="portfolio_images__item">
+                <div class="image">
+                  <img src="img/portfolio/portfolio-5.png" alt="abstract-animals">
+                </div>
+              </li>
+              <li class="portfolio_images__item">
+                <div class="image">
+                  <img src="img/portfolio/portfolio-6.png" alt="codding">
+                </div>
+              </li>
+              <li class="portfolio_images__item">
+                <div class="image">
+                  <img src="img/portfolio/portfolio-7.png" alt="ufo">
+                </div>
+              </li>
+              <li class="portfolio_images__item">
+                <div class="image">
+                  <img src="img/portfolio/portfolio-8.png" alt="chickens">
+                </div>
+              </li>
+              <li class="portfolio_images__item">
+                <div class="image">
+                  <img src="img/portfolio/portfolio-9.png" alt="devil">
+                </div>
+              </li>
+              <li class="portfolio_images__item">
+                <div class="image"></div>
+                <img src="img/portfolio/portfolio-10.png" alt="lettering">
+              </li>
+              <li class="portfolio_images__item">
+                <div class="image">
+                  <img src="img/portfolio/portfolio-11.png" alt="monster">
+                </div>
+              </li>
+              <li class="portfolio_images__item">
+                <div class="image">
+                  <img src="img/portfolio/portfolio-12.png" alt="sadness">
+                </div>
+              </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="footer">
+        <div class="wrapper footer__wrapper">
+          <div>
+            <p>© Copyright 2013</p>
           </div>
-          <div class="portfolio_images__wrapper">
-              <ul class="portfolio_images">
-                <li class="portfolio_images__item">
-                  <div class="image">
-                    <img src="img/portfolio/portfolio-1.png" alt="boat">
-                  </div>
-                </li>
-                <li class="portfolio_images__item">
-                  <div class="image">
-                    <img src="img/portfolio/portfolio-2.png" alt="happyness">
-                  </div>
-                </li>
-                <li class="portfolio_images__item">
-                  <div class="image">
-                    <img src="img/portfolio/portfolio-3.png" alt="space">
-                  </div>
-                </li>
-                <li class="portfolio_images__item">
-                  <div class="image">
-                    <img src="img/portfolio/portfolio-4.png" alt="robot">
-                  </div>
-                </li>
-                <li class="portfolio_images__item">
-                  <div class="image">
-                    <img src="img/portfolio/portfolio-5.png" alt="abstract-animals">
-                  </div>
-                </li>
-                <li class="portfolio_images__item">
-                  <div class="image">
-                    <img src="img/portfolio/portfolio-6.png" alt="codding">
-                  </div>
-                </li>
-                <li class="portfolio_images__item">
-                  <div class="image">
-                    <img src="img/portfolio/portfolio-7.png" alt="ufo">
-                  </div>
-                </li>
-                <li class="portfolio_images__item">
-                  <div class="image">
-                    <img src="img/portfolio/portfolio-8.png" alt="chickens">
-                  </div>
-                </li>
-                <li class="portfolio_images__item">
-                  <div class="image">
-                    <img src="img/portfolio/portfolio-9.png" alt="devil">
-                  </div>
-                </li>
-                <li class="portfolio_images__item">
-                  <div class="image"></div>
-                  <img src="img/portfolio/portfolio-10.png" alt="lettering">
-                </li>
-                <li class="portfolio_images__item">
-                  <div class="image">
-                    <img src="img/portfolio/portfolio-11.png" alt="monster">
-                  </div>
-                </li>
-                <li class="portfolio_images__item">
-                  <div class="image">
-                    <img src="img/portfolio/portfolio-12.png" alt="sadness">
-                  </div>
-                </li>
+          <div class="social" >
+            <ul class="ico-networks">
+              <li class="ico-networks__link">
+                <a href="#">
+                  <img class="svg" src="img/svg/social icons/ico-facebook.svg" alt="facebook">
+                </a>
+              </li>
+              <li class="ico-networks__link">
+                <a href="#">
+                  <img class="svg" src="img/svg/social icons/ico-google-plus.svg" alt="google">
+                </a>
+              </li>
+              <li class="ico-networks__link">
+                <a href="#">
+                  <img class="svg" src="img/svg/social icons/ico-linkedin.svg" alt="linkedin">
+                </a>
+              </li>
+              <li class="ico-networks__link">
+                <a href="#">
+                  <img class="svg" src="img/svg/social icons/ico-twitter.svg" alt="twitter">
+                </a>
+              </li>
             </ul>
           </div>
         </div>
-      </div>
-    </section>
-    <footer class="footer">
-          <div class="wrapper footer__wrapper">
-            <div>
-              <p>© Copyright 2013</p>
-            </div>
-            <div class="social" >
-              <ul class="ico-networks">
-                <li class="ico-networks__link">
-                  <a href="#">
-                    <img class="svg" src="img/svg/social icons/ico-facebook.svg" alt="facebook">
-                  </a>
-                </li>
-                <li class="ico-networks__link">
-                  <a href="#">
-                    <img class="svg" src="img/svg/social icons/ico-google-plus.svg" alt="google">
-                  </a>
-                </li>
-                <li class="ico-networks__link">
-                  <a href="#">
-                    <img class="svg" src="img/svg/social icons/ico-linkedin.svg" alt="linkedin">
-                  </a>
-                </li>
-                <li class="ico-networks__link">
-                  <a href="#">
-                    <img class="svg" src="img/svg/social icons/ico-twitter.svg" alt="twitter">
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-    </footer>
-    <script async src="./script.js"></script>
-  </main>
+  </footer>
+  <script async src="./script.js"></script>
 </body>
 </html>
