feat: find faults in JS for navigation-menu, start do new-simple-slider

--- a/singolo.html
+++ b/singolo.html
@@ -16,8 +16,7 @@
       <nav class="header__navigation">
         <ul class="navigation" id="nav-menu">
           <li class="navigation__link">
-            <a class="active" href="#home">HOME</a>
-          </li>
+            <a class="active" href="#home">HOME</a></li>
           <li class="navigation__link">
             <a href="#services">SERVICES</a>
           </li>
@@ -41,6 +40,12 @@
           type="image/svg+xml"
           data="picture.svg">
           <img class="slide"
+            src="img/slide-2/Slide-2.svg">
+        </object>
+        <object
+          type="image/svg+xml"
+          data="picture.svg">
+          <img class="slide"
             src="img/slide-1/Slide-1.svg">
         </object>
         <object
@@ -48,6 +53,12 @@
           data="picture.svg">
           <img class="slide"
             src="img/slide-2/Slide-2.svg">
+        </object>
+        <object
+          type="image/svg+xml"
+          data="picture.svg">
+          <img class="slide"
+            src="img/slide-1/Slide-1.svg">
         </object>
       </div>
       <div class="btn-container">
