refactor: add padding for scrolling-function css and js (for header - not hide page-content), do interactive for slider buttons

--- a/singolo.html
+++ b/singolo.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="sass/style.css">
 </head>
-<body class="menu-link" id="home">
+<body>
   <header class="header">
     <div class="wrapper header__wrapper">
       <div class="site_name_wrapper">
@@ -33,7 +33,7 @@
       </nav>
     </div>
   </header>
-  <section id="slider">
+  <section  class="menu-link" id="home">
     <div class="slider-container">
       <div class="slider-line">
         <object
