feat: add adaptive-slider for 4 images (whithout hide-carousel)

--- a/singolo.html
+++ b/singolo.html
@@ -34,12 +34,12 @@
     </div>
   </header>
   <section  class="menu-link" id="home">
-    <div class="slider-container">
+    <div class="slider">
       <div class="slider-line">
         <object
           type="image/svg+xml"
           data="picture.svg">
-          <img class="slide"
+          <img id="last_clone" class="slide"
             src="img/slide-2/Slide-2.svg">
         </object>
         <object
@@ -57,14 +57,14 @@
         <object
           type="image/svg+xml"
           data="picture.svg">
-          <img class="slide"
+          <img  id="first_clone"  class="slide"
             src="img/slide-1/Slide-1.svg">
         </object>
       </div>
       <div class="btn-container">
-        <div class="btn" id="left">
+        <div class="btn slider_left" id="left">
         </div>
-        <div class="btn" id="right">
+        <div class="btn slider_right" id="right">
         </div>
       </div>
     </div>
